--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
+<!doctype html>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
-    <title>Clock</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clocks</title>
+  </head>
 
-<body>
-    <div id="app"></div>
-</body>
-
+  <body></body>
 </html>
